data table editable pagination and search

--- a/index.html
+++ b/index.html
@@ -153,7 +153,11 @@
         <span></span>
     </div>
     <ul>
-        <li>Client Management</li>
+        <li>
+          <a href="client management.html">
+            Client Management
+          </a>
+       </li>
         <li>Department Management</li>
         <li>Team Management</li>
         <li>Unit Management</li>
