all forms added in layout

--- a/unitForm.html
+++ b/unitForm.html
@@ -190,23 +190,28 @@
                         <div class="col">
                             <div class="accordionform">
                                 <div class="accordion" id="accordionExample">
-                                    <!-- Dmform -->
+                                    <!-- Unit Form -->
                                     <div class="card">
                                         <div class="card-header" id="headingOne">
                                             <h2 class="mb-0">
-                                                <button class="btn btn btn text btn-success float-right " type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                                        Add Department
+                                                <button class="btn btn btn text btn-success float-right" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                                        Add Unit
                                       </button>
                                             </h2>
                                         </div>
 
-                                        <div id="collapseTwo" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                        <div id="collapseFour" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                                             <div class="card-body">
                                                 <form>
                                                     <div class="form-row">
                                                         <div class="form-group col-md-6">
-                                                            <label for="exampleInputEmail1">Department Name </label>
-                                                            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                                            <label for="exampleFormControlSelect1">Unit Type</label>
+                                                            <select class="form-control" id="exampleFormControlSelect1">
+                                                          <option selected>Kg</option>
+                                                          <option>Liter </option>
+                                                          <option>gm</option>
+                                                         
+                                                        </select>
                                                         </div>
 
 
@@ -220,16 +225,13 @@
                                                         </select>
                                                         </div>
 
-
                                                     </div>
-
 
                                                     <button type="submit" class="btn btn-primary">Submit</button>
                                                 </form>
                                             </div>
                                         </div>
                                     </div>
-
 
 
 
