--- a/index.html
+++ b/index.html
@@ -157,9 +157,11 @@
                 <li>
                     <a href="departmentForm.html">Department Management</a>
                 </li>
-                <li>Team Management</li>
-                <li>Unit Management</li>
-                <li>Requisitions Item Management</li>
+                <li> <a href="teamForm.html">Team Management</a>
+                </li>
+                <li><a href="unitForm.html">Unit Management</a></li>
+                <li><a href="itemForm.html">Requisition item  Management</a></li>
+
                 <li>Project Management</li>
                 <li>Site Management</li>
                 <li>Requisition Management</li>
