--- a/itemForm.html
+++ b/itemForm.html
@@ -190,22 +190,24 @@
                         <div class="col">
                             <div class="accordionform">
                                 <div class="accordion" id="accordionExample">
-                                    <!-- Dmform -->
+
+                                    <!-- Requisition item form -->
+
                                     <div class="card">
                                         <div class="card-header" id="headingOne">
                                             <h2 class="mb-0">
-                                                <button class="btn btn btn text btn-success float-right " type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                                        Add Department
+                                                <button class="btn btn btn text btn-success float-right " type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
+                                        Add Item
                                       </button>
                                             </h2>
                                         </div>
 
-                                        <div id="collapseTwo" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                        <div id="collapseFive" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                                             <div class="card-body">
                                                 <form>
                                                     <div class="form-row">
                                                         <div class="form-group col-md-6">
-                                                            <label for="exampleInputEmail1">Department Name </label>
+                                                            <label for="exampleInputEmail1">Item  Name </label>
                                                             <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                                                         </div>
 
@@ -229,8 +231,6 @@
                                             </div>
                                         </div>
                                     </div>
-
-
 
 
                                 </div>
