--- a/teamForm.html
+++ b/teamForm.html
@@ -190,27 +190,40 @@
                         <div class="col">
                             <div class="accordionform">
                                 <div class="accordion" id="accordionExample">
-                                    <!-- Dmform -->
+                                    <!-- Team form -->
                                     <div class="card">
                                         <div class="card-header" id="headingOne">
                                             <h2 class="mb-0">
-                                                <button class="btn btn btn text btn-success float-right " type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                                        Add Department
+                                                <button class="btn btn btn text btn-success float-right" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                                        Add Team
                                       </button>
                                             </h2>
                                         </div>
 
-                                        <div id="collapseTwo" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                        <div id="collapseThree" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                                             <div class="card-body">
                                                 <form>
                                                     <div class="form-row">
-                                                        <div class="form-group col-md-6">
-                                                            <label for="exampleInputEmail1">Department Name </label>
+                                                        <div class="form-group col-md-4">
+                                                            <label for="exampleInputEmail1">Team  Name </label>
                                                             <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                                                         </div>
 
+                                                        <div class="form-group col-md-4">
+                                                            <label for="exampleInputEmail1">Selected  Users</label>
+                                                            <br>
+                                                            <select class="form-control js-example-basic-multiple" name="states[]" multiple="multiple">
+                                                            <option value="Mu">Munna</option>
+                                                            <option value="Ha">Hasan</option>
+                                                            <option value="Km">kamrul</option>
+                                                            <option value="Em">Emon</option>
+                                                            <option value="Ra">Rasel</option>
+                                                          </select>
+                                                        </div>
 
-                                                        <div class="form-group col-md-6">
+
+
+                                                        <div class="form-group col-md-4">
                                                             <label for="exampleFormControlSelect1">Status</label>
                                                             <select class="form-control" id="exampleFormControlSelect1">
                                                           <option selected>Active</option>
@@ -229,6 +242,7 @@
                                             </div>
                                         </div>
                                     </div>
+
 
 
 
