all forms added in layout

--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@
                 <span></span>
             </div>
             <ul>
+                <li>Client Management</li>
+                <li>Department Management</li>
+                <li>Team Management</li>
+                <li>Unit Management</li>
+                <li>Requisitions Item Management</li>
+                <li>Project Management</li>
+                <li>Site Management</li>
+                <li>Requisition Management</li>
+
                 <li>
                     <a href="clientForm.html">Client Management</a>
                 </li>
@@ -161,11 +170,6 @@
                 </li>
                 <li><a href="unitForm.html">Unit Management</a></li>
                 <li><a href="itemForm.html">Requisition item  Management</a></li>
-
-                <li>Project Management</li>
-                <li>Site Management</li>
-                <li>Requisition Management</li>
-
             </ul>
         </div>
 
