fixed sidebar button content ul

--- a/index.html
+++ b/index.html
@@ -150,27 +150,55 @@
                 <span></span>
                 <span></span>
             </div>
-            <ul>
-                <li>Client Management</li>
-                <li>Department Management</li>
-                <li>Team Management</li>
-                <li>Unit Management</li>
-                <li>Requisitions Item Management</li>
-                <li>Project Management</li>
-                <li>Site Management</li>
-                <li>Requisition Management</li>
+<!--            <ul>-->
+<!--                <li>Client Management</li>-->
+<!--                <li>Department Management</li>-->
+<!--                <li>Team Management</li>-->
+<!--                <li>Unit Management</li>-->
+<!--                <li>Requisitions Item Management</li>-->
+<!--                <li>Project Management</li>-->
+<!--                <li>Site Management</li>-->
+<!--                <li>Requisition Management</li>-->
 
-                <li>
-                    <a href="clientForm.html">Client Management</a>
-                </li>
-                <li>
-                    <a href="departmentForm.html">Department Management</a>
-                </li>
-                <li> <a href="teamForm.html">Team Management</a>
-                </li>
-                <li><a href="unitForm.html">Unit Management</a></li>
-                <li><a href="itemForm.html">Requisition item  Management</a></li>
-            </ul>
+<!--                <li>-->
+<!--                    <a href="clientForm.html">Client Management</a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="departmentForm.html">Department Management</a>-->
+<!--                </li>-->
+<!--                <li> <a href="teamForm.html">Team Management</a>-->
+<!--                </li>-->
+<!--                <li><a href="unitForm.html">Unit Management</a></li>-->
+<!--                <li><a href="itemForm.html">Requisition item  Management</a></li>-->
+<!--            </ul>-->
+
+    <ul>
+        <li>
+            <a href="client management.html" style="text-decoration: none;"> Client Management </a>
+        </li>
+        <li>
+           <a href="department_management.html" style="text-decoration: none;"> Department Management </a>
+        </li>
+        <li>
+            <a href="team_management.html" style="text-decoration: none;"> Team Management </a>
+        </li>
+        <li>
+            <a href="unit_management.html" style="text-decoration: none;"> Unit Management </a>
+        </li>
+        <li>
+            <a href="requisitions_item_management.html" style="text-decoration: none;"> Requisitions Item Management </a>
+        </li>
+        <li>
+            <a href="client management.html" style="text-decoration: none;"> Project Management </a>
+        </li>
+        <li>
+            <a href="client management.html" style="text-decoration: none;"> Site Management </a>
+        </li>
+        <li>
+            <a href="client management.html" style="text-decoration: none;"> Requisition Management </a>
+        </li>
+
+    </ul>
         </div>
 
 <!--Bootstrap CDN-->
