--- a/project_management.html
+++ b/project_management.html
@@ -150,27 +150,7 @@
                 <span></span>
                 <span></span>
             </div>
-            <!--            <ul>-->
-            <!--                <li>Client Management</li>-->
-            <!--                <li>Department Management</li>-->
-            <!--                <li>Team Management</li>-->
-            <!--                <li>Unit Management</li>-->
-            <!--                <li>Requisitions Item Management</li>-->
-            <!--                <li>Project Management</li>-->
-            <!--                <li>Site Management</li>-->
-            <!--                <li>Requisition Management</li>-->
 
-            <!--                <li>-->
-            <!--                    <a href="clientForm.html">Client Management</a>-->
-            <!--                </li>-->
-            <!--                <li>-->
-            <!--                    <a href="departmentForm.html">Department Management</a>-->
-            <!--                </li>-->
-            <!--                <li> <a href="teamForm.html">Team Management</a>-->
-            <!--                </li>-->
-            <!--                <li><a href="unitForm.html">Unit Management</a></li>-->
-            <!--                <li><a href="itemForm.html">Requisition item  Management</a></li>-->
-            <!--            </ul>-->
 
             <ul>
                 <li>
@@ -199,6 +179,48 @@
                 </li>
 
             </ul>
+        </div>
+
+
+        <div class="container">
+            <div class="row mt-5">
+
+                <div class="card-deck">
+                    <div class="scroll">
+                        <div class="card" style="width: 18rem;">
+
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="scroll">
+                        <div class="card" style="width: 18rem;">
+
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.Some quick example text to build on the card title and make up the bulk of the card's content.Some quick example text to build
+                                    on the card title and make up the bulk of the card's content</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+
+
+
+                </div>
+
+
+
+
+            </div>
         </div>
 
         <!--Bootstrap CDN-->
