--- a/project_management.html
+++ b/project_management.html
@@ -188,26 +188,241 @@
                 <div class="card-deck">
                     <div class="scroll">
                         <div class="card" style="width: 18rem;">
+                            <h3 class="card-header">Project 1</h3>
 
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+
+
+
+                                <p><label for="id"> Project Id : </label> 2001</p>
+
+                                <p><label for="id"> Client Name : </label> munna</p>
+                                <p><label for="id"> Requisition  : </label> Enable</p>
+                                <p><label for="id"> Assigned Department  : </label> Civil</p>
+                                <p><label for="id"> Assigned Team : </label> A</p>
+
+                                <!-- <h5><span class="badge badge-pill badge-primary">Project Id :</span>2001</h5>
+
+                                <p><span class="badge badge-primary">Client Name : </span> Munna</p> -->
+
+                                <p><label for="id"> Managerial Approval: </label> Approve</p>
+                                <p><label for="id"> Administrative  Approval : </label> Disapprove</p>
+                                <p><label for="id"> Accounts Approval : </label> Disapprove</p>
+
+                                <p><label for="id"> Project Budget : </label> 20,000</p>
+                                <p><label for="id"> Start date : </label> 20/08/2019</p>
+                                <p><label for="id"> Expected Completion Date : </label> 15/07/2020</p>
+                                <p><label for="id"> Completion Date : </label> 28/07/2020</p>
+                                <p><label for="id"> Expected Handover Date : </label> 10/08/2020</p>
+                                <p><label for="id"> Handover Date : </label> 13/08/2020</p>
+                                <p><label for="id"> Project Description : </label> requisitions_item_management System</p>
+                                <p><label for="id"> Project Status : </label> Running</p>
+
+
                             </div>
                         </div>
 
 
                     </div>
+
+
+
                     <div class="scroll">
                         <div class="card" style="width: 18rem;">
+                            <h3 class="card-header">Project 2</h3>
 
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.Some quick example text to build on the card title and make up the bulk of the card's content.Some quick example text to build
-                                    on the card title and make up the bulk of the card's content</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+
+
+
+                                <p><label for="id"> Project Id : </label> 2001</p>
+
+                                <p><label for="id"> Client Name : </label> munna</p>
+                                <p><label for="id"> Requisition  : </label> Enable</p>
+                                <p><label for="id"> Assigned Department  : </label> Civil</p>
+                                <p><label for="id"> Assigned Team : </label> A</p>
+
+                                <!-- <h5><span class="badge badge-pill badge-primary">Project Id :</span>2001</h5>
+
+                                <p><span class="badge badge-primary">Client Name : </span> Munna</p> -->
+
+                                <p><label for="id"> Managerial Approval: </label> Approve</p>
+                                <p><label for="id"> Administrative  Approval : </label> Disapprove</p>
+                                <p><label for="id"> Accounts Approval : </label> Disapprove</p>
+
+                                <p><label for="id"> Project Budget : </label> 20,000</p>
+                                <p><label for="id"> Start date : </label> 20/08/2019</p>
+                                <p><label for="id"> Expected Completion Date : </label> 15/07/2020</p>
+                                <p><label for="id"> Completion Date : </label> 28/07/2020</p>
+                                <p><label for="id"> Expected Handover Date : </label> 10/08/2020</p>
+                                <p><label for="id"> Handover Date : </label> 13/08/2020</p>
+                                <p><label for="id"> Project Description : </label> requisitions_item_management System</p>
+                                <p><label for="id"> Project Status : </label> Running</p>
+
+
                             </div>
                         </div>
+
+
+                    </div>
+
+
+                    <div class="scroll">
+                        <div class="card" style="width: 18rem;">
+                            <h3 class="card-header">Project 3</h3>
+
+                            <div class="card-body">
+
+
+
+                                <p><label for="id"> Project Id : </label> 2001</p>
+
+                                <p><label for="id"> Client Name : </label> munna</p>
+                                <p><label for="id"> Requisition  : </label> Enable</p>
+                                <p><label for="id"> Assigned Department  : </label> Civil</p>
+                                <p><label for="id"> Assigned Team : </label> A</p>
+
+                                <!-- <h5><span class="badge badge-pill badge-primary">Project Id :</span>2001</h5>
+
+                                <p><span class="badge badge-primary">Client Name : </span> Munna</p> -->
+
+                                <p><label for="id"> Managerial Approval: </label> Approve</p>
+                                <p><label for="id"> Administrative  Approval : </label> Disapprove</p>
+                                <p><label for="id"> Accounts Approval : </label> Disapprove</p>
+
+                                <p><label for="id"> Project Budget : </label> 20,000</p>
+                                <p><label for="id"> Start date : </label> 20/08/2019</p>
+                                <p><label for="id"> Expected Completion Date : </label> 15/07/2020</p>
+                                <p><label for="id"> Completion Date : </label> 28/07/2020</p>
+                                <p><label for="id"> Expected Handover Date : </label> 10/08/2020</p>
+                                <p><label for="id"> Handover Date : </label> 13/08/2020</p>
+                                <p><label for="id"> Project Description : </label> requisitions_item_management System</p>
+                                <p><label for="id"> Project Status : </label> Running</p>
+
+
+                            </div>
+                        </div>
+
+
+                    </div>
+
+
+                    <div class="scroll">
+                        <div class="card" style="width: 18rem;">
+                            <h3 class="card-header">Project 4</h3>
+
+                            <div class="card-body">
+
+
+
+                                <p><label for="id"> Project Id : </label> 2001</p>
+
+                                <p><label for="id"> Client Name : </label> munna</p>
+                                <p><label for="id"> Requisition  : </label> Enable</p>
+                                <p><label for="id"> Assigned Department  : </label> Civil</p>
+                                <p><label for="id"> Assigned Team : </label> A</p>
+
+                                <!-- <h5><span class="badge badge-pill badge-primary">Project Id :</span>2001</h5>
+
+                                <p><span class="badge badge-primary">Client Name : </span> Munna</p> -->
+
+                                <p><label for="id"> Managerial Approval: </label> Approve</p>
+                                <p><label for="id"> Administrative  Approval : </label> Disapprove</p>
+                                <p><label for="id"> Accounts Approval : </label> Disapprove</p>
+
+                                <p><label for="id"> Project Budget : </label> 20,000</p>
+                                <p><label for="id"> Start date : </label> 20/08/2019</p>
+                                <p><label for="id"> Expected Completion Date : </label> 15/07/2020</p>
+                                <p><label for="id"> Completion Date : </label> 28/07/2020</p>
+                                <p><label for="id"> Expected Handover Date : </label> 10/08/2020</p>
+                                <p><label for="id"> Handover Date : </label> 13/08/2020</p>
+                                <p><label for="id"> Project Description : </label> requisitions_item_management System</p>
+                                <p><label for="id"> Project Status : </label> Running</p>
+
+
+                            </div>
+                        </div>
+
+
+                    </div>
+
+                    <div class="scroll">
+                        <div class="card" style="width: 18rem;">
+                            <h3 class="card-header">Project 5</h3>
+
+                            <div class="card-body">
+
+
+
+                                <p><label for="id"> Project Id : </label> 2001</p>
+
+                                <p><label for="id"> Client Name : </label> munna</p>
+                                <p><label for="id"> Requisition  : </label> Enable</p>
+                                <p><label for="id"> Assigned Department  : </label> Civil</p>
+                                <p><label for="id"> Assigned Team : </label> A</p>
+
+                                <!-- <h5><span class="badge badge-pill badge-primary">Project Id :</span>2001</h5>
+
+                                <p><span class="badge badge-primary">Client Name : </span> Munna</p> -->
+
+                                <p><label for="id"> Managerial Approval: </label> Approve</p>
+                                <p><label for="id"> Administrative  Approval : </label> Disapprove</p>
+                                <p><label for="id"> Accounts Approval : </label> Disapprove</p>
+
+                                <p><label for="id"> Project Budget : </label> 20,000</p>
+                                <p><label for="id"> Start date : </label> 20/08/2019</p>
+                                <p><label for="id"> Expected Completion Date : </label> 15/07/2020</p>
+                                <p><label for="id"> Completion Date : </label> 28/07/2020</p>
+                                <p><label for="id"> Expected Handover Date : </label> 10/08/2020</p>
+                                <p><label for="id"> Handover Date : </label> 13/08/2020</p>
+                                <p><label for="id"> Project Description : </label> requisitions_item_management System</p>
+                                <p><label for="id"> Project Status : </label> Running</p>
+
+
+                            </div>
+                        </div>
+
+
+                    </div>
+
+
+
+                    <div class="scroll">
+                        <div class="card" style="width: 18rem;">
+                            <h3 class="card-header">Project 6</h3>
+
+                            <div class="card-body">
+
+
+
+                                <p><label for="id"> Project Id : </label> 2001</p>
+
+                                <p><label for="id"> Client Name : </label> munna</p>
+                                <p><label for="id"> Requisition  : </label> Enable</p>
+                                <p><label for="id"> Assigned Department  : </label> Civil</p>
+                                <p><label for="id"> Assigned Team : </label> A</p>
+
+                                <!-- <h5><span class="badge badge-pill badge-primary">Project Id :</span>2001</h5>
+
+                                <p><span class="badge badge-primary">Client Name : </span> Munna</p> -->
+
+                                <p><label for="id"> Managerial Approval: </label> Approve</p>
+                                <p><label for="id"> Administrative  Approval : </label> Disapprove</p>
+                                <p><label for="id"> Accounts Approval : </label> Disapprove</p>
+
+                                <p><label for="id"> Project Budget : </label> 20,000</p>
+                                <p><label for="id"> Start date : </label> 20/08/2019</p>
+                                <p><label for="id"> Expected Completion Date : </label> 15/07/2020</p>
+                                <p><label for="id"> Completion Date : </label> 28/07/2020</p>
+                                <p><label for="id"> Expected Handover Date : </label> 10/08/2020</p>
+                                <p><label for="id"> Handover Date : </label> 13/08/2020</p>
+                                <p><label for="id"> Project Description : </label> requisitions_item_management System</p>
+                                <p><label for="id"> Project Status : </label> Running</p>
+
+
+                            </div>
+                        </div>
+
 
                     </div>
 
