--- a/requisitions_item_management.html
+++ b/requisitions_item_management.html
@@ -194,7 +194,10 @@
             <a href="requisitions_item_management.html" style="text-decoration: none;"> Requisitions Item Management </a>
         </li>
         <li>
-            <a href="client management.html" style="text-decoration: none;"> Project Management </a>
+            <ul> Project Management
+                <li><a href="add_new_project.html" style="text-decoration: none;">Add New Project </a></li>
+                <li>View All Projrct</li>
+            </ul>
         </li>
         <li>
             <a href="client management.html" style="text-decoration: none;"> Site Management </a>
