--- a/requisitions_item_management.html
+++ b/requisitions_item_management.html
@@ -194,13 +194,13 @@
             <a href="requisitions_item_management.html" style="text-decoration: none;"> Requisitions Item Management </a>
         </li>
         <li>
-            <a href="client management.html" style="text-decoration: none;"> Project Management </a>
+            <a href="#" style="text-decoration: none;"> Project Management </a>
         </li>
         <li>
-            <a href="client management.html" style="text-decoration: none;"> Site Management </a>
+            <a href="#" style="text-decoration: none;"> Site Management </a>
         </li>
         <li>
-            <a href="client management.html" style="text-decoration: none;"> Requisition Management </a>
+            <a href="#" style="text-decoration: none;"> Requisition Management </a>
         </li>
 
     </ul>
