--- a/team_management.html
+++ b/team_management.html
@@ -193,14 +193,14 @@
         <li>
             <a href="requisitions_item_management.html" style="text-decoration: none;"> Requisitions Item Management </a>
         </li>
-        <li>
-            <a href="client management.html" style="text-decoration: none;"> Project Management </a>
+         <li>
+            <a href="#" style="text-decoration: none;"> Project Management </a>
         </li>
         <li>
-            <a href="client management.html" style="text-decoration: none;"> Site Management </a>
+            <a href="#" style="text-decoration: none;"> Site Management </a>
         </li>
         <li>
-            <a href="client management.html" style="text-decoration: none;"> Requisition Management </a>
+            <a href="#" style="text-decoration: none;"> Requisition Management </a>
         </li>
 
     </ul>
