--- a/client management.html
+++ b/client management.html
@@ -126,7 +126,10 @@
             </ul>
         </li>
         <li>
-            <a href="#" style="text-decoration: none;"> Site Management </a>
+            <ul> Site Management
+                <li><a href="add_new_site.html" style="text-decoration: none;">Add New Site</a></li>
+                <li><a href="" style="text-decoration: none;"> View All Sites</a></li>
+            </ul>
         </li>
         <li>
             <a href="#" style="text-decoration: none;"> Requisition Management </a>
