add home button

--- a/add_new_project.html
+++ b/add_new_project.html
@@ -21,6 +21,7 @@
 
 
     <div class="navbar" style="display: flex; justify-content: flex-end">
+         <a href="index.html" style="text-decoration: none; color: #e1f5fe; margin-right: 90%"> Home </a>
         <ul>
             <li class="nav-item">
                 <a class="nav-link" href="#">
