--- a/client management.html
+++ b/client management.html
@@ -26,7 +26,8 @@
 
 <body>
 
-    <div class="navbar" style="display: flex; justify-content: flex-end">
+    <div class="navbar " style="display: flex; justify-content: flex-end">
+         <a href="index.html" style="text-decoration: none; color: #e1f5fe; margin-right: 90%"> Home </a>
         <ul>
             <li class="nav-item">
                 <a class="nav-link" href="#">
@@ -136,7 +137,7 @@
 </div>
 
 <!--Sayket Client add code Start-->
- <h1 class="text-center">Client management</h1>
+ <h1 class="text-center" style="padding: 20px">Client management</h1>
  <div class="layout_content" style="margin-bottom: 20px">
                 <div class="container">
                     <div class="row">
@@ -154,7 +155,7 @@
                                             </h2>
                                         </div>
 
-                                        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                                             <div class="card-body">
                                                 <form>
 
