--- a/department_management.html
+++ b/department_management.html
@@ -39,6 +39,7 @@
 
 
 <div class="navbar" style="display: flex; justify-content: flex-end">
+     <a href="index.html" style="text-decoration: none; color: #e1f5fe; margin-right: 90%"> Home </a>
     <ul>
         <li class="nav-item">
             <a class="nav-link" href="#">
@@ -153,7 +154,7 @@
 </div>
 
 <!--Sayket Client add code Start-->
- <h1 class="text-center">Department management</h1>
+ <h1 class="text-center" style="padding: 20px">Department management</h1>
 <div class="layout_content" style="margin-bottom: 20px">
     <div class="container">
         <div class="row">
@@ -173,7 +174,7 @@
                                 </h2>
                             </div>
 
-                            <div id="collapseTwo" class="collapse show" aria-labelledby="headingOne"
+                            <div id="collapseTwo" class="collapse" aria-labelledby="headingOne"
                                  data-parent="#accordionExample">
                                 <div class="card-body">
                                     <form>
