--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body>
 
 
-<div class="navbar" style="display: flex; justify-content: flex-end">
+<div class="navbar " style="display: flex; justify-content: flex-end">
+     <a href="index.html" style="text-decoration: none; color: #e1f5fe; margin-right: 90%"> Home </a>
     <ul>
         <li class="nav-item">
             <a class="nav-link" href="#">
