--- a/project_management.html
+++ b/project_management.html
@@ -22,6 +22,7 @@
 
 
 <div class="navbar" style="display: flex; justify-content: flex-end">
+     <a href="index.html" style="text-decoration: none; color: #e1f5fe; margin-right: 90%"> Home </a>
     <ul>
         <li class="nav-item">
             <a class="nav-link" href="#">
@@ -138,7 +139,6 @@
 
 
 <!--Edit button Modal Start-->
-
 <div class="row d-flex justify-content-center modalWrapper">
     <div
             class="modal fade addNewInputs"
@@ -148,12 +148,22 @@
             aria-labelledby="modalAdd"
             aria-hidden="true">
 
-        <div class="row justify-content-center ">
+        <div class="row justify-content-center"  style="padding: 50px">
             <div class="col-md-8 ">
                 <span class="anchor" id="formLogin"></span>
                 <!-- form card login -->
                 <div class="card card-outline-secondary shadow-lg">
-                    <h1 class="text-center mb-3" style="padding: 20px">Edit Project</h1>
+                    <ul>
+                        <li>
+                            <h1 class="text-center mb-3" style="padding: 20px">Edit Project</h1>
+                        </li>
+                        <li>
+                            <a href="project_management.html"
+                               style="color: black; font-size: 20px; margin-left: 800px;"> &times; </a>
+                        </li>
+                    </ul>
+
+
                     <hr>
 
 <!--                    <div class="card-body body">-->
