--- a/team_management.html
+++ b/team_management.html
@@ -39,6 +39,7 @@
 
 
 <div class="navbar" style="display: flex; justify-content: flex-end">
+     <a href="index.html" style="text-decoration: none; color: #e1f5fe; margin-right: 90%"> Home </a>
     <ul>
         <li class="nav-item">
             <a class="nav-link" href="#">
@@ -152,7 +153,7 @@
 </div>
 
 <!--Sayket Client add code Start-->
- <h1 class="text-center">Team management</h1>
+ <h1 class="text-center" style="padding: 20px">Team management</h1>
  <div class="layout_content" style="margin-bottom: 20px">
         <div class="container">
             <div class="row">
@@ -172,7 +173,7 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapseThree" class="collapse show" aria-labelledby="headingOne"
+                                <div id="collapseThree" class="collapse" aria-labelledby="headingOne"
                                      data-parent="#accordionExample">
                                     <div class="card-body">
                                         <form>
