--- a/site_management.html
+++ b/site_management.html
@@ -222,6 +222,8 @@
     <!-- site Management -->
 
     <div class="container">
+        <h2 class="text-center mt-3"> All Sites</h2>
+        <hr>
         <div class="row mt-5">
 
             <div class="card-deck">
