all project show resolved

--- a/site_management.html
+++ b/site_management.html
@@ -132,7 +132,10 @@
                 </ul>
             </li>
             <li>
-                <a href="site_management.html" style="text-decoration: none;"> Site Management </a>
+                <ul> Site Management
+                <li><a href="add_new_site.html" style="text-decoration: none;">Add New Site</a></li>
+                <li><a href="site_management.html" style="text-decoration: none;"> View All Sites</a></li>
+            </ul>
             </li>
             <li>
                 <a href="requisitions_item_management.html" style="text-decoration: none;"> Requisition Management </a>
@@ -152,7 +155,15 @@
                     <span class="anchor" id="formLogin"></span>
                     <!-- form card login -->
                     <div class="card card-outline-secondary shadow-lg">
-                        <h1 class="text-center mb-3" style="padding: 20px">Edit Site </h1>
+                         <ul>
+                        <li>
+                            <h1 class="text-center mb-3" style="padding: 20px">Edit Site</h1>
+                        </li>
+                        <li>
+                            <a href="site_management.html"
+                               style="color: black; font-size: 20px; margin-left: 600px;"> &times; </a>
+                        </li>
+                    </ul>
                         <hr>
 
                         <div class="container">
