--- a/requisitions_item_management.html
+++ b/requisitions_item_management.html
@@ -144,7 +144,7 @@
         <li>
             <ul> Site Management
                 <li><a href="add_new_site.html" style="text-decoration: none;">Add New Site</a></li>
-                <li><a href="" style="text-decoration: none;"> View All Sites</a></li>
+                <li><a href="site_management.html" style="text-decoration: none;"> View All Sites</a></li>
             </ul>
         </li>
         <li>
