--- a/project_management.html
+++ b/project_management.html
@@ -143,10 +143,16 @@
                 </ul>
             </li>
             <li>
-                <a href="#" style="text-decoration: none;"> Site Management </a>
+                <ul> Site Management
+                    <li><a href="add_new_site.html" style="text-decoration: none;">Add New Site</a></li>
+                    <li><a href="" style="text-decoration: none;"> View All Sites</a></li>
+                </ul>
             </li>
             <li>
-                <a href="#" style="text-decoration: none;"> Requisition Management </a>
+                <ul>Requisition Management
+                    <li><a href="add_new_requisition.html" style="text-decoration: none;">Add New Requisition</a></li>
+                    <li><a href="" style="text-decoration: none;"> View All Requisitions</a></li>
+                </ul>
             </li>
 
         </ul>
