--- a/department_management.html
+++ b/department_management.html
@@ -150,7 +150,10 @@
             </ul>
         </li>
         <li>
-            <a href="#" style="text-decoration: none;"> Requisition Management </a>
+            <ul>Requisition Management
+                <li><a href="add_new_requisition.html" style="text-decoration: none;">Add New Requisition</a></li>
+                <li><a href="" style="text-decoration: none;"> View All Requisitions</a></li>
+            </ul>
         </li>
 
     </ul>
